--- a/index.html
+++ b/index.html
@@ -64,19 +64,25 @@
         </main>
 
         <footer>
-            <div>
-                <img src="static/icon-truck.svg" class="footer-icono">
-                <span>Entrega</span>
+            <div class="footer-item">
+                <span class="footer-icono">
+                    <img src="static/icon-truck.svg">
+                </span>
+                <a href="">Entrega</a>
             </div>
-            <div>
-                <a>Devoluciones y Cambios</a>
+            <div class="footer-item">
+                <a href="">Devoluciones y Cambios</a>
             </div>
-            <div>
-                <img src="static/icon-phone.svg" class="footer-icono">
+            <div class="footer-item">
+                <span class="footer-icono">
+                    <img src="static/icon-phone.svg">
+                </span>
                 <a href="tel:+3757491823">+375 (29) 749-18-23</a>
             </div>
-            <div>
-                <img src="static/icon-mail.svg" class="footer-icono">
+            <div class="footer-item">
+                <span class="footer-icono">
+                    <img src="static/icon-mail.svg">
+                </span>
                 <a href="mailto:shop@mix.com">shop@omix.com</a>
             </div>
         </footer>
